Fix for Chrom{e|ium} not wrapping in fieldsets.

--- a/css/default.css
+++ b/css/default.css
@@ -979,7 +979,7 @@ div.multichannel {
 }
 
 .nowrap {
-    white-space: nowrap;
+    display: inline;
 }
 
 .nowrap_noborder {
@@ -987,7 +987,7 @@ div.multichannel {
     padding: 0px;
     margin-left: auto;
     margin-right: auto;
-    white-space: nowrap;
+    display: inline
 }
 
 .multichannelinput {
